# Thesis_LULCC_Analysis

./: README.md  config.py  download_lg_data.py  pyproject.toml
data/Fix-the-sankeys/: 14_3_12.csv  14_3_12.html  1_3_16.csv  1_3_16.html  1_3_19.csv  1_3_19.html  1_8_37.csv  1_8_37.html  6_23_24.csv  6_23_24.html  Denmark (Renewable Energy Production).csv  Denmark (Renewable Energy Production).html  Denmark.csv  Denmark.html  Estonia (Renewable Energy Production).csv  Estonia (Renewable Energy Production).html  Estonia.csv  Estonia.html  Israel (Renewable Energy Production).csv  Israel (Renewable Energy Production).html  Israel.csv  Israel.html  Netherlands (Renewable Energy Production).csv  Netherlands (Renewable Energy Production).html  Netherlands.csv  Netherlands.html  tfidf_cluster_0.html  tfidf_cluster_1.csv  tfidf_cluster_1.html  tfidf_cluster_2.csv  tfidf_cluster_2.html  tfidf_cluster_3.csv  tfidf_cluster_3.html  tfidf_cluster_4.html
data/change_queries/: agricultural_expansion.csv  deforestation.csv  desertification.csv  outliers.csv  renewable_expansion.csv  solar_expansion.csv  urban_spawl.csv
data/dynamicity/: dynamicity.csv
scripts/: Embeddings.ipynb  Energy-Agency-EDA.ipynb  Fix-the-sankeys.ipynb  Land-Change-For-Every-Country.ipynb  RCS-Visualizations.ipynb  What-Turned-Into-Renewable.ipynb  change_sequences.py  chip_selection.ipynb  chip_viz.ipynb  get_countries.py  raster2geometry.py
src/: DataBaseManager.py  SATLAS.py  data_handlers.py  dynamic_world.py  measure_LULC.py  utils.py  verify_DW_crops.py  verify_SATLAS_wind.py
src/data/: utils.py
(+12 files in other folders)
