[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["DueViktor <viktorduep@gmail.com>", "Aske Meineche <askm@itu.dk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.2"
folium = "^0.15.1"
rasterio = "^1.3.9"
earthengine-api = "^0.1.389"
geopandas = "^0.14.3"
shapely = "^2.0.2"
tqdm = "^4.66.2"
openpyxl = "^3.1.2"
xmltodict = "^0.13.0"
pyarrow = "^15.0.0"
networkx = "^3.2.1"
seaborn = "^0.13.2"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.27"
contextily = "^1.5.0"
imageio = "^2.34.0"
plotly = "^5.19.0"
nbformat = "^5.9.2"
mplleaflet = "^0.0.5"
pydrive = "^1.3.1"
sshtunnel = "^0.4.0"
geoalchemy2 = "^0.14.4"
google-api-python-client = "^2.119.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.0"
tabulate = "^0.9.0"
pillow = "^10.2.0"
schedule = "^1.2.1"
geopy = "^2.4.1"
scipy = "^1.12.0"
nominatim = "^0.1"
pysankey = "^0.0.1"
pacmap = "^0.7.2"
selenium = "^4.19.0"
rioxarray = "^0.15.5"
webdriver-manager = "^4.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.2.1"
ipykernel = "^6.29.2"
pillow = "^10.2.0"
rasterio = "^1.3.9"
pytest = "^8.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
